change the time of program

--- a/index.html
+++ b/index.html
@@ -510,14 +510,14 @@
                     <i class="fas fa-calendar-start"></i>
                     <div>
                         <h3 data-en="Start Date" data-fr="Date de début" data-ar="تاريخ البداية">Start Date</h3>
-                        <p data-en="July 28th, 2025" data-fr="28 juillet 2025" data-ar="28 يوليو 2025">July 28th, 2025</p>
+                        <p data-en="August 4th, 2025" data-fr="4 août 2025" data-ar="4 أغسطس 2025">August 4th, 2025</p>
                     </div>
                 </div>
                 <div class="date-item">
                     <i class="fas fa-calendar-check"></i>
                     <div>
                         <h3 data-en="End Date" data-fr="Date de fin" data-ar="تاريخ الانتهاء">End Date</h3>
-                        <p data-en="August 6th, 2025" data-fr="6 août 2025" data-ar="6 أغسطس 2025">August 6th, 2025</p>
+                        <p data-en="September 13th, 2025" data-fr="13 septembre 2025" data-ar="13 سبتمبر 2025">September 13th, 2025</p>
                     </div>
                 </div>
                 <div class="date-item">
